--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,7 +14,7 @@
             <p>Sign in to manage your images</p>
         </div>
 
-        {% if request.query_params.get('error') == '1' %}
+        {% if request.args.get('error') == '1' %}
         <div class="error-message show" id="error-message">
             <i-lucide data-icon="alert-circle"></i-lucide>
             <span>Invalid username or password</span>
@@ -62,7 +62,7 @@
     </div>
 
     {% include 'scripts.html' %}
-    <script src="{{ url_for('static', path='auth.js') }}"></script>
+    <script src="{{ url_for('static', filename='auth.js') }}"></script>
     <script>
         // Initialize Lucide icons
         lucide.createIcons();
